--- a/index.html
+++ b/index.html
@@ -3,26 +3,26 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Oscar Barajas Tavares @gndx</title>
+  <title>Oscar Perez Lora @codesivenatura</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="robots" content="follow, index" />
   <meta name="description"
-    content="Learning Engineer at @platzi - Microsoft MVP - Lead at Developer Circles from Meta, #JavaScript #React #Web3 #BTC #ETH - #Twitch Partner" />
-  <meta property="og:url" content="https://gndx.io" />
+    content="Científico de datos" />
+  <meta property="og:url" content="https://codesivenatura.io" />
   <meta property="og:type" content="website" />
-  <meta property="og:site_name" content="Oscar Barajas Tavares" />
+  <meta property="og:site_name" content="Oscar Pérez Lora" />
   <meta property="og:description"
-    content="Learning Engineer at @platzi - Microsoft MVP - Lead at Developer Circles from Meta, #JavaScript #React #Web3 #BTC #ETH - #Twitch Partner" />
-  <meta property="og:title" content="Oscar Barajas Tavares" />
+    content="Científico de datos" />
+  <meta property="og:title" content="Oscar Pérez Lora" />
   <meta property="og:image" content="https://arepa.s3.amazonaws.com/og-gndx-dev-avatar.png" />
   <meta property="og:locale" content="es_ES" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Oscar Barajas Tavares" />
+  <meta name="twitter:title" content="Oscar Pérez Lora" />
   <meta name="twitter:description"
-    content="Learning Engineer at @platzi - Microsoft MVP - Lead at Developer Circles from Meta, #JavaScript #React #Web3 #BTC #ETH - #Twitch Partner" />
+    content="Científico de datos" />
   <meta name="twitter:image" content="https://arepa.s3.amazonaws.com/og-gndx-dev-avatar.png" />
-  <meta name="twitter:site" content="@gndx" />
-  <meta name="twitter:creator" content="@gndx" />
+  <meta name="twitter:site" content="@codesivenatura" />
+  <meta name="twitter:creator" content="@codesivenatura" />
   <link href="favicon.png" rel="icon" type="image/png" />
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
